--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  background-color: #1c89ff;
+  border: solid 1px #fff;
+  color: #fff;
+  font-size: 1rem;
+}
