--- a/src/components/WorkExperienceEntry.css
+++ b/src/components/WorkExperienceEntry.css
@@ -1,4 +1,6 @@
-.workExperienceEntry {
+.workExperienceEntry, .workExperienceForm {
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 15px;
 }
