--- a/src/components/EducationEntry.css
+++ b/src/components/EducationEntry.css
@@ -2,5 +2,9 @@
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 35px;
+}
+
+.title {
+    font-weight: bold;
 }
